# elysia-updater-elysiaos

./: CMakeLists.txt  ElysiaUpdater.cpp  ElysiaUpdater.h  README.md  elysia-updater.sh  elyupdate  git-elyos.sh  main.cpp  resources.qrc  translations.cpp  translations.h
